--- a/package.json
+++ b/package.json
@@ -20,8 +20,25 @@
   "devDependencies": {
     "bootstrap": "^4.6.1",
     "chart.js": "^3.7.0",
+    "datatables.net-autofill-bs4": "^2.3.9",
+    "datatables.net-bs4": "^1.11.3",
+    "datatables.net-buttons-bs4": "^2.1.1",
+    "datatables.net-colreorder-bs4": "^1.5.5",
+    "datatables.net-datetime": "^1.1.1",
+    "datatables.net-fixedcolumns-bs4": "^4.0.1",
+    "datatables.net-fixedheader-bs4": "^3.2.1",
+    "datatables.net-keytable-bs4": "^2.6.4",
+    "datatables.net-responsive-bs4": "^2.2.9",
+    "datatables.net-rowgroup-bs4": "^1.1.4",
+    "datatables.net-rowreorder-bs4": "^1.2.8",
+    "datatables.net-scroller-bs4": "^2.0.5",
+    "datatables.net-searchbuilder-bs4": "^1.3.0",
+    "datatables.net-searchpanes-bs4": "^1.4.0",
+    "datatables.net-select-bs4": "^1.3.4",
     "jquery": "^3.6.0",
     "jquery-easing": "^0.0.1",
+    "jszip": "^3.7.1",
+    "pdfmake": "^0.2.4",
     "popper.js": "^1.16.1",
     "sweetalert": "^2.1.2"
   }
