--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "node-sass": "^7.0.1",
     "pdfmake": "^0.2.4",
     "popper.js": "^1.16.1",
+    "resolve-url-loader": "^4.0.0",
+    "sass": "^1.45.2",
+    "sass-loader": "^12.1.0",
     "sweetalert": "^2.1.2"
   }
 }
