--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "App\\Models\\": "app/Models"
+            "App\\Models\\": "app/Models",
+            "App\\Controllers\\": "app/Controllers"
         }
     },
     "authors": [
