--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 APP_ENV = dev #dev|prod
+APP_NAME = "Webjump Acessment"
+APP_LOCALE = en
 DATABASE_DRIVER = mysql
 DATABASE_HOST = localhost
 DATABASE_NAME = Webjump
