Remove " from APP_NAME

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_ENV = dev #dev|prod
-APP_NAME = "Webjump Acessment"
+APP_NAME = Webjump Acessment
 APP_LOCALE = en
 DATABASE_DRIVER = mysql
 DATABASE_HOST = localhost
