--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "datatables.net-select-bs4": "^1.3.4",
     "jquery": "^3.6.0",
     "jquery-easing": "^0.0.1",
+    "jquery-validation": "^1.19.3",
     "jszip": "^3.7.1",
     "laravel-mix": "^6.0.39",
     "node-sass": "^7.0.1",
