--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,6 +1,9 @@
 {
     "/public/js/app.js": "/public/js/app.js",
     "/public/css/app.css": "/public/css/app.css",
+    "/public/images/emoji.png": "/public/images/emoji.png",
     "/public/images/favicon.png": "/public/images/favicon.png",
-    "/public/images/favicon.svg": "/public/images/favicon.svg"
+    "/public/images/favicon.svg": "/public/images/favicon.svg",
+    "/public/images/login.png": "/public/images/login.png",
+    "/public/images/login_alt.png": "/public/images/login_alt.png"
 }
