--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -4,6 +4,6 @@
     "/public/images/emoji.png": "/public/images/emoji.png",
     "/public/images/favicon.png": "/public/images/favicon.png",
     "/public/images/favicon.svg": "/public/images/favicon.svg",
-    "/public/images/login.png": "/public/images/login.png",
-    "/public/images/login_alt.png": "/public/images/login_alt.png"
+    "/public/images/home_bg.png": "/public/images/home_bg.png",
+    "/public/images/login.png": "/public/images/login.png"
 }
