Update app info

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webjump_accessment",
+  "name": "webjump_assessment",
   "version": "1.0.0",
   "description": "Criamos esse teste para avaliar seus conhecimentos e habilidades como desenvolvedor backend.",
   "main": "index.js",
