--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "name": "israe/app",
+    "name": "israel/webjump_assessment",
+    "description": "The Laravel Framework.",
     "autoload": {
         "psr-4": {
             "App\\": "app/",
@@ -13,5 +14,12 @@
             "email": "israel.pinheiro@live.com"
         }
     ],
-    "require": {}
+    "scripts": {
+        "post-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ]
+    },
+    "require": {
+        "php": "^7.3|^8.0"
+    }
 }
